# signal

./: .clang-format  .gitignore  .valgrind.supp  AI_INTEGRATION_SUMMARY.md  API_DOCUMENTATION.md  ARCHITECTURAL_REVIEW_RESPONSE.md  ASSET_PIPELINE_VALIDATION.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.proposed  CMakePresets.json  CONTRIBUTING.md  DartConfiguration.tcl  Doxyfile  GEMINI.md  LICENSE  Makefile  Makefile.cmake  Makefile.cmake.generated  Makefile.new  Makefile.test  PROJECT.md  PROJECT_FILE_INDEX.md  PROJECT_INDEX.md  README.md  SCRIPTED_FLIGHT_DEBUG_SUMMARY.md  SOKOL_MIGRATION_PROGRESS.md  SPRINT_TEST.md  VISION.md  ai_engine.c  ai_engine.h  build_status.sh  calculate_thrust_ratio.py  camera.c  cgame_config.txt  code_analysis.csv  configure.sh  debug_output.txt  debug_physics_test  (+47 more)
.github/: BRANCH_PROTECTION_SETUP.md  GOOD_FIRST_ISSUES.md  REPOSITORY_SETUP.md  copilot-instructions.md  pull_request_template.md
_site/: index.html
assets/: material_definitions.json
cmake/: Assets.cmake  Assets.cmake.proposed  CompilerFlags.cmake  CompilerFlags.cmake.proposed  Dependencies.cmake  FindODE.cmake  FindYAML.cmake  Platform.cmake  Platform.cmake.proposed  TestMigration.cmake
docs/: ASSET_PIPELINE.md  C11_MIGRATION_PROPOSAL.md  CGAME_AUDIT_SUMMARY.md  CLEANUP_SUMMARY.md  CLEAN_CODEBASE_ORGANIZATION.md  CLEAN_CODE_AND_TECH_DEBT_ENGINEERING_REPORT.md  CONSOLIDATED_BACKLOG.md  CONTROL_ARCHITECTURE.md  CONTROL_IMPLEMENTATION_SUMMARY.md  CONTROL_SCHEME_MANUAL.md  CONTROL_SYSTEM_ARCHITECTURE.md  CONTROL_TEST_PLAN.md  CRITICAL_FINDINGS_SUMMARY.md  CURRENT_STATUS.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAP.md  DOCUMENTATION_STANDARDS.md  FLIGHT_MECHANICS_ANALYSIS.md  GAMEPLAY_VERTICAL_SLICE_BACKLOG.md  LEGACY_CLEANUP_PROPOSAL.md  PROJECT_STATUS.md  PROJECT_STATUS_CURRENT.md  README.md  RELEASE_STANDARDS.md  RESEARCH_INDEX.md  SCENE_OVERHAUL_COMPLETED.md  SCENE_SYSTEM_MIGRATION_ANALYSIS.md  SIMPLIFIED_THRUSTER_SYSTEM_USAGE.md  SPRINT_19_CICD_COMPLETE.md  SPRINT_19_COMPLETE.md  SPRINT_19_GREEN_COMPLETE.md  SPRINT_19_MEMORY_SYSTEM_COMPLETE.md  SPRINT_19_REFACTOR_PHASE.md  SPRINT_19_TDD_PLAN.md  SPRINT_20_COMPLETE.md  SPRINT_20_LIGHTING_PLAN.md  SPRINT_21_DESIGN.md  SPRINT_STATUS.md  (+9 more)
legacy_backup/: system_camera.h  system_collision.h  system_physics.c  system_physics.h
legacy_code/: nuklear.h  ui_legacy.c  ui_navigation_menu_render.c
makefiles/: assets.mk  compiler.mk  platform.mk  sources.mk  targets.mk  tests.mk
server/: Dockerfile  game_sim.c  game_sim.h  go.mod  go.sum  main.c  main.go  net_protocol.h  task-definition.json
shared/: belt.h  math_util.h  protocol.h  (+4 more)
tests/: CMakeLists.txt  CMakeLists.txt.original  Makefile  README.md  TEST_MAKEFILE_ADVANCED.mk  TEST_SUITE_ORGANIZATION.md  browser-smoke.spec.ts  core_math.c  core_math.h  test_assets.c  test_cmake-core_test_components  test_cmake-core_test_math  test_cmake-core_test_world  test_cmake-integration  test_cmake-performance_test_memory_isolated  test_cmake-performance_test_memory_perf  test_cmake-performance_test_performance_critical  test_cmake-performance_test_performance_simple  test_cmake-rendering  test_cmake-ui  test_control_demo.c  test_core_math.c  test_main.c  test_main_simple.c  test_memory_management.c  test_performance_lod_simple.c  test_rendering.c  test_rendering_comprehensive.c  test_runner.c  test_task_4_simple.c  test_unified_control_scheme.c
tests/backlog/: README.md
tests/cmake/: TestDiscovery.cmake
tests/core/: test_components.c  test_math.c  test_world.c
tests/hal/: test_mock_hal.c  test_mock_hal_ci.c
tests/input/: test_enhanced_input_processing.c
tests/integration/: test_flight_assist.c  test_flight_integration.c  test_flight_test_scene_critical.c  test_scene_integration.c
tests/math/: test_pd_controller.c
tests/microui/: test_microui_core.c  test_microui_diagnostics.c  test_microui_minimal.c  test_microui_pipeline.c  test_microui_rendering.c
tests/mocks/: mock_graphics.c  mock_graphics.h
tests/performance/: test_memory_isolated.c  test_memory_perf.c  test_performance_critical.c  test_performance_simple.c
tests/regression/: test_sprint_21_velocity_bug.c
tests/rendering/: README.md  test_graphics_pipeline.c  test_render_3d_pipeline.c  test_render_layers.c  test_rendering.c  test_rendering_integration.c  test_ui_rendering_pipeline.c
tests/scenes/: test_flight_test_scene.c
tests/services/: test_input_action_maps.c  test_input_service.c
tests/ship/: test_ship_assembly.c
tests/sprint_10_5/: large_mesh.cobj  runner.c  runner_task_4.c  runner_task_5.c  small_mesh.cobj  test_task_1.c  test_task_1_standalone.c  test_task_2.c  test_task_2_standalone.c  test_task_3.c  test_task_3_standalone.c  test_task_4.c  test_task_5.c
tests/sprint_10_5/test_assets/meshes/: index.json
tests/sprint_10_5/test_assets/meshes/props/test_ship/: geometry.cobj
tests/stubs/: asset_stubs.c  asset_stubs.h  engine_test_stubs.c  graphics_api_test_stub.c  integration_test_stubs.c  memory_test_stubs.c  microui_test_stubs.c  microui_test_stubs.h  nuklear_test_stubs.c  performance_test_stubs.c  sokol_app_stub.h  stub_registry.h  ui_function_stubs.c  ui_function_stubs.h  ui_microui_test_utils.c  ui_microui_test_utils.h  ui_test_stubs.h
tests/support/: test_automation.py  test_coverage.h  test_discovery.c  test_discovery.h  test_runner.h  test_utilities.c  test_utilities.h
tests/systems/: test_camera.c  test_control.c  test_input.c  test_input_advanced.c  test_input_system_critical.c  test_memory.c  test_performance_lod.c  test_physics_6dof.c  test_scripted_flight.c  test_simplified_ship_design.c  test_thrusters.c
tests/temp_assets/: index.json
tests/temp_assets/props/test_ship/: geometry.cobj
tests/ui/: test_bitmap_font.c  test_ui_events.c  test_ui_performance.c  test_ui_system.c  test_ui_visibility.c
tests/unit/: test_camera_system.c  test_control.c  test_ecs_core.c  test_input_system.c  test_physics_6dof.c  test_physics_critical.c  test_scene_system.c  test_systems.c  test_thrusters.c  test_ui_system.c
(+703 files in other folders)
